--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "mysql": "^2.15.0",
+    "node-localstorage": "^1.3.0",
+    "nodemailer": "^4.3.1",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "session-file-store": "^1.1.2",
+    "validator": "^9.1.1"
   },
   "description": "Just an app to know if there's a bday in your group today",
   "main": "app.js",
